firefox-trunk (78.0~a1~hg20200526r532094-0ubuntu1) UNRELEASED; urgency=medium

  * Handle ja-JP-mac locale
    - update debian/config/locales.shipped
    - update debian/config/searchplugins.conf
  * Drop obsolete patches
    - debian/patches/ppc-drop-register.patch
  * Remove obsolete conf-flags
    - debian/config/mozconfig.in
    - debian/patches/ubuntu-ua-string-changes.patch
    - debian/patches/support-coinstallable-trunk-build.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 04 May 2020 08:38:10 +0200

firefox-trunk (77.0~a1~hg20200503r527799-0ubuntu1) groovy; urgency=medium

  * Update cbindgen to 0.14.2
    - debian/build/create-tarball.py
  * Drop obsolete patches
    - debian/patches/bug1622013-vpx-mmx.diff
  * Update patches
    - debian/patches/rust-drop-dll-checksums.patch
    - debian/patches/partially-revert-google-search-update.patch
    - debian/patches/dont-checkout-locales.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 04 May 2020 08:38:10 +0200

firefox-trunk (76.0~a1~hg20200403r521956-0ubuntu1) focal; urgency=medium

  [ Rico Tzschichholz ]
  * Update patches
    - debian/patches/ubuntu-ua-string-changes.patch
    - debian/patches/cleanup-old-distribution-search-engines.patch
  * Drop obsolete patches
    - debian/patches/s390x-authenticator.patch
    - debian/patches/mark-distribution-search-engines-as-read-only.patch
  * Fix i386 build
    - debian/patches/bug1622013-vpx-mmx.diff
  * Separately installed browser/blocklist.xml was removed
    - debian/firefox.install.in
  * Update cbindgen to 0.13.2
    - debian/build/create-tarball.py
  * Bump build-dep on nasm >= 2.14.02
    - debian/control{,.in}

  [ Olivier Tilloy ]
  * Port packaging to python3

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 10 Mar 2020 10:09:30 +0100

firefox-trunk (75.0~a1~hg20200309r517485-0ubuntu1) focal; urgency=medium

  [ Rico Tzschichholz ]
  * Bump build-dep on nodejs >= 10.19
    - debian/control{,.in}