@@ -8,8 +8,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "searchDefault": "Google",
      "searchOrder": ["Google", "Bing"],
      "visibleDefaultEngines": [
--      "google-b-d", "amazondotcom", "bing", "ddg", "ebay", "twitter", "wikipedia"
-+      "google", "amazondotcom", "bing", "ddg", "ebay", "twitter", "wikipedia"
+-      "google-b-d", "amazondotcom", "bing", "ddg", "ebay", "wikipedia"
++      "google", "amazondotcom", "bing", "ddg", "ebay", "wikipedia"
      ]
    },
    "regionOverrides": {
@@ -23,8 +23,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "en-US": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "amazondotcom", "bing", "ddg", "ebay", "twitter", "wikipedia"
-+          "google", "amazondotcom", "bing", "ddg", "ebay", "twitter", "wikipedia"
+-          "google-b-d", "amazondotcom", "bing", "ddg", "ebay", "wikipedia"
++          "google", "amazondotcom", "bing", "ddg", "ebay", "wikipedia"
          ]
        },
        "KZ": {
@@ -32,8 +32,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "ach": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazondotcom", "ddg", "twitter", "wikipedia"
-+          "google", "bing", "amazondotcom", "ddg", "twitter", "wikipedia"
+-          "google-b-d", "bing", "amazondotcom", "ddg", "wikipedia"
++          "google", "bing", "amazondotcom", "ddg", "wikipedia"
          ]
        }
      },
@@ -48,8 +48,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "an": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "ebay-es", "wikipedia-an", "ddg", "twitter"
-+          "google", "bing", "ebay-es", "wikipedia-an", "ddg", "twitter"
+-          "google-b-d", "bing", "ebay-es", "wikipedia-an", "ddg"
++          "google", "bing", "ebay-es", "wikipedia-an", "ddg"
          ]
        }
      },
@@ -145,24 +145,24 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "bs": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "ddg", "olx", "twitter", "wikipedia-bs"
-+          "google", "ddg", "olx", "twitter", "wikipedia-bs"
+-          "google-b-d", "ddg", "olx", "wikipedia-bs"
++          "google", "ddg", "olx", "wikipedia-bs"
          ]
        }
      },
      "ca": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "diec2", "ddg", "ebay-es", "twitter", "wikipedia-ca"
-+          "google", "bing", "diec2", "ddg", "ebay-es", "twitter", "wikipedia-ca"
+-          "google-b-d", "bing", "diec2", "ddg", "ebay-es", "wikipedia-ca"
++          "google", "bing", "diec2", "ddg", "ebay-es", "wikipedia-ca"
          ]
        }
      },
      "ca-valencia": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "diec2", "ddg", "ebay-es", "twitter", "wikipedia-ca"
-+          "google", "bing", "diec2", "ddg", "ebay-es", "twitter", "wikipedia-ca"
+-          "google-b-d", "bing", "diec2", "ddg", "ebay-es", "wikipedia-ca"
++          "google", "bing", "diec2", "ddg", "ebay-es", "wikipedia-ca"
          ]
        }
      },
@@ -234,35 +234,35 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "en-CA": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "amazon-ca", "bing", "ddg", "ebay-ca", "twitter", "wikipedia"
-+          "google", "amazon-ca", "bing", "ddg", "ebay-ca", "twitter", "wikipedia"
+-          "google-b-d", "amazon-ca", "bing", "ddg", "ebay-ca", "wikipedia"
++          "google", "amazon-ca", "bing", "ddg", "ebay-ca", "wikipedia"
          ]
        },
        "KZ": {
          "visibleDefaultEngines": [
--          "yandex-en", "google-b-d", "amazon-ca", "bing", "ddg", "ebay-ca", "twitter", "wikipedia"
-+          "yandex-en", "google", "amazon-ca", "bing", "ddg", "ebay-ca", "twitter", "wikipedia"
+-          "yandex-en", "google-b-d", "amazon-ca", "bing", "ddg", "ebay-ca", "wikipedia"
++          "yandex-en", "google", "amazon-ca", "bing", "ddg", "ebay-ca", "wikipedia"
          ],
          "searchDefault": "Yandex"
        },
        "BY": {
          "visibleDefaultEngines": [
--          "yandex-en", "google-b-d", "amazon-ca", "bing", "ddg", "ebay-ca", "twitter", "wikipedia"
-+          "yandex-en", "google", "amazon-ca", "bing", "ddg", "ebay-ca", "twitter", "wikipedia"
+-          "yandex-en", "google-b-d", "amazon-ca", "bing", "ddg", "ebay-ca", "wikipedia"
++          "yandex-en", "google", "amazon-ca", "bing", "ddg", "ebay-ca", "wikipedia"
          ],
          "searchDefault": "Yandex"
        },
        "RU": {
          "visibleDefaultEngines": [
--          "yandex-en", "google-b-d", "amazon-ca", "bing", "ddg", "ebay-ca", "twitter", "wikipedia"
-+          "yandex-en", "google", "amazon-ca", "bing", "ddg", "ebay-ca", "twitter", "wikipedia"
+-          "yandex-en", "google-b-d", "amazon-ca", "bing", "ddg", "ebay-ca", "wikipedia"
++          "yandex-en", "google", "amazon-ca", "bing", "ddg", "ebay-ca", "wikipedia"
          ],
          "searchDefault": "Yandex"
        },
        "TR": {
          "visibleDefaultEngines": [
--          "yandex-en", "google-b-d", "amazon-ca", "bing", "ddg", "ebay-ca", "twitter", "wikipedia"
-+          "yandex-en", "google", "amazon-ca", "bing", "ddg", "ebay-ca", "twitter", "wikipedia"
+-          "yandex-en", "google-b-d", "amazon-ca", "bing", "ddg", "ebay-ca", "wikipedia"
++          "yandex-en", "google", "amazon-ca", "bing", "ddg", "ebay-ca", "wikipedia"
          ],
          "searchDefault": "Yandex"
        },
@@ -270,35 +270,35 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "en-GB": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "twitter", "wikipedia"
-+          "google", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "twitter", "wikipedia"
+-          "google-b-d", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "wikipedia"
++          "google", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "wikipedia"
          ]
        },
        "KZ": {
          "visibleDefaultEngines": [
--          "yandex-en", "google-b-d", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "twitter", "wikipedia"
-+          "yandex-en", "google", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "twitter", "wikipedia"
+-          "yandex-en", "google-b-d", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "wikipedia"
++          "yandex-en", "google", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "wikipedia"
          ],
          "searchDefault": "Yandex"
        },
        "BY": {
          "visibleDefaultEngines": [
--          "yandex-en", "google-b-d", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "twitter", "wikipedia"
-+          "yandex-en", "google", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "twitter", "wikipedia"
+-          "yandex-en", "google-b-d", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "wikipedia"
++          "yandex-en", "google", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "wikipedia"
          ],
          "searchDefault": "Yandex"
        },
        "RU": {
          "visibleDefaultEngines": [
--          "yandex-en", "google-b-d", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "twitter", "wikipedia"
-+          "yandex-en", "google", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "twitter", "wikipedia"
+-          "yandex-en", "google-b-d", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "wikipedia"
++          "yandex-en", "google", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "wikipedia"
          ],
          "searchDefault": "Yandex"
        },
        "TR": {
          "visibleDefaultEngines": [
--          "yandex-en", "google-b-d", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "twitter", "wikipedia"
-+          "yandex-en", "google", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "twitter", "wikipedia"
+-          "yandex-en", "google-b-d", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "wikipedia"
++          "yandex-en", "google", "bing", "amazon-en-GB", "chambers-en-GB", "ddg", "ebay-uk", "wikipedia"
          ],
          "searchDefault": "Yandex"
        },
@@ -330,8 +330,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "es-ES": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "drae", "ddg", "ebay-es", "twitter", "wikipedia-es"
-+          "google", "bing", "drae", "ddg", "ebay-es", "twitter", "wikipedia-es"
+-          "google-b-d", "bing", "drae", "ddg", "ebay-es", "wikipedia-es"
++          "google", "bing", "drae", "ddg", "ebay-es", "wikipedia-es"
          ]
        }
      },
@@ -404,8 +404,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "ga-IE": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "amazon-en-GB", "ddg", "ebay-ie", "tearma", "twitter", "wikipedia-ga-IE"
-+          "google", "amazon-en-GB", "ddg", "ebay-ie", "tearma", "twitter", "wikipedia-ga-IE"
+-          "google-b-d", "amazon-en-GB", "ddg", "ebay-ie", "tearma", "wikipedia-ga-IE"
++          "google", "amazon-en-GB", "ddg", "ebay-ie", "tearma", "wikipedia-ga-IE"
          ]
        }
      },
@@ -428,8 +428,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "gn": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-gn"
-+          "google", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-gn"
+-          "google-b-d", "bing", "amazondotcom", "ddg", "wikipedia-gn"
++          "google", "bing", "amazondotcom", "ddg", "wikipedia-gn"
          ]
        }
      },
@@ -460,8 +460,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "hr": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "amazon-en-GB", "bing", "ddg", "eudict", "twitter", "wikipedia-hr"
-+          "google", "amazon-en-GB", "bing", "ddg", "eudict", "twitter", "wikipedia-hr"
+-          "google-b-d", "amazon-en-GB", "bing", "ddg", "eudict", "wikipedia-hr"
++          "google", "amazon-en-GB", "bing", "ddg", "eudict", "wikipedia-hr"
          ]
        }
      },
@@ -500,8 +500,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "ia": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-ia"
-+          "google", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-ia"
+-          "google-b-d", "bing", "amazondotcom", "ddg", "wikipedia-ia"
++          "google", "bing", "amazondotcom", "ddg", "wikipedia-ia"
          ]
        }
      },
@@ -531,27 +531,27 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      },
 @@ -557,7 +557,7 @@
        "default": {
-         "searchOrder": ["Google", "Yahoo! JAPAN", "Bing", "Amazon.co.jp", "楽天市場", "ヤフオク!", "教えて！goo", "Twitter", "Wikipedia (ja)"],
+         "searchOrder": ["Google", "Yahoo! JAPAN", "Bing", "Amazon.co.jp", "楽天市場", "ヤフオク!", "教えて！goo", "Wikipedia (ja)"],
          "visibleDefaultEngines": [
--          "google-b-d", "yahoo-jp", "bing", "amazon-jp", "rakuten", "yahoo-jp-auctions", "oshiete-goo", "twitter-ja", "wikipedia-ja", "ddg"
-+          "google", "yahoo-jp", "bing", "amazon-jp", "rakuten", "yahoo-jp-auctions", "oshiete-goo", "twitter-ja", "wikipedia-ja", "ddg"
+-          "google-b-d", "yahoo-jp", "bing", "amazon-jp", "rakuten", "yahoo-jp-auctions", "oshiete-goo", "wikipedia-ja", "ddg"
++          "google", "yahoo-jp", "bing", "amazon-jp", "rakuten", "yahoo-jp-auctions", "oshiete-goo", "wikipedia-ja", "ddg"
          ]
        }
      },
 @@ -565,28 +565,28 @@
        "default": {
-         "searchOrder": ["Google", "Yahoo! JAPAN", "Bing", "Amazon.co.jp", "楽天市場", "ヤフオク!", "教えて！goo", "Twitter", "Wikipedia (ja)"],
+         "searchOrder": ["Google", "Yahoo! JAPAN", "Bing", "Amazon.co.jp", "楽天市場", "ヤフオク!", "教えて！goo", "Wikipedia (ja)"],
          "visibleDefaultEngines": [
--          "google-b-d", "yahoo-jp", "bing", "amazon-jp", "rakuten", "yahoo-jp-auctions", "oshiete-goo", "twitter-ja", "wikipedia-ja", "ddg"
-+          "google", "yahoo-jp", "bing", "amazon-jp", "rakuten", "yahoo-jp-auctions", "oshiete-goo", "twitter-ja", "wikipedia-ja", "ddg"
+-          "google-b-d", "yahoo-jp", "bing", "amazon-jp", "rakuten", "yahoo-jp-auctions", "oshiete-goo", "wikipedia-ja", "ddg"
++          "google", "yahoo-jp", "bing", "amazon-jp", "rakuten", "yahoo-jp-auctions", "oshiete-goo", "wikipedia-ja", "ddg"
          ]
        }
      },
      "ka": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-ka"
-+          "google", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-ka"
+-          "google-b-d", "bing", "amazondotcom", "ddg", "wikipedia-ka"
++          "google", "bing", "amazondotcom", "ddg", "wikipedia-ka"
          ]
        }
      },
@@ -566,8 +566,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "kk": {
        "default": {
          "visibleDefaultEngines": [
--          "yandex-kk", "google-b-d", "ddg", "flip", "twitter", "wikipedia-kk"
-+          "yandex-kk", "google", "ddg", "flip", "twitter", "wikipedia-kk"
+-          "yandex-kk", "google-b-d", "ddg", "flip", "wikipedia-kk"
++          "yandex-kk", "google", "ddg", "flip", "wikipedia-kk"
          ]
        },
        "KZ": {
@@ -575,8 +575,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "km": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-km"
-+          "google", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-km"
+-          "google-b-d", "bing", "amazondotcom", "ddg", "wikipedia-km"
++          "google", "bing", "amazondotcom", "ddg", "wikipedia-km"
          ]
        }
      },
@@ -607,16 +607,16 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "lo": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "ddg", "wikipedia-lo", "twitter"
-+          "google", "bing", "ddg", "wikipedia-lo", "twitter"
+-          "google-b-d", "bing", "ddg", "wikipedia-lo"
++          "google", "bing", "ddg", "wikipedia-lo"
          ]
        }
      },
      "lt": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "wikipedia-lt", "bing", "amazondotcom", "ddg", "twitter"
-+          "google", "wikipedia-lt", "bing", "amazondotcom", "ddg", "twitter"
+-          "google-b-d", "wikipedia-lt", "bing", "amazondotcom", "ddg"
++          "google", "wikipedia-lt", "bing", "amazondotcom", "ddg"
          ]
        }
      },
@@ -663,16 +663,16 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "ms": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-ms"
-+          "google", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-ms"
+-          "google-b-d", "bing", "amazondotcom", "ddg", "wikipedia-ms"
++          "google", "bing", "amazondotcom", "ddg", "wikipedia-ms"
          ]
        }
      },
      "my": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-my"
-+          "google", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-my"
+-          "google-b-d", "bing", "amazondotcom", "ddg", "wikipedia-my"
++          "google", "bing", "amazondotcom", "ddg", "wikipedia-my"
          ]
        }
      },
@@ -687,8 +687,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "ne-NP": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "ddg", "twitter", "wikipedia-ne"
-+          "google", "bing", "ddg", "twitter", "wikipedia-ne"
+-          "google-b-d", "bing", "ddg", "wikipedia-ne"
++          "google", "bing", "ddg", "wikipedia-ne"
          ]
        }
      },
@@ -712,8 +712,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "oc": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "ddg", "twitter", "wikipedia-oc", "wiktionary-oc"
-+          "google", "bing", "ddg", "twitter", "wikipedia-oc", "wiktionary-oc"
+-          "google-b-d", "bing", "ddg", "wikipedia-oc", "wiktionary-oc"
++          "google", "bing", "ddg", "wikipedia-oc", "wiktionary-oc"
          ]
        }
      },
@@ -736,8 +736,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "pt-BR": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "ddg", "mercadolivre", "twitter", "wikipedia-pt"
-+          "google", "bing", "ddg", "mercadolivre", "twitter", "wikipedia-pt"
+-          "google-b-d", "bing", "ddg", "mercadolivre", "wikipedia-pt"
++          "google", "bing", "ddg", "mercadolivre", "wikipedia-pt"
          ]
        }
      },
@@ -801,8 +801,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "sl": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "ceneji", "ddg", "najdi-si", "odpiralni", "twitter", "wikipedia-sl"
-+          "google", "ceneji", "ddg", "najdi-si", "odpiralni", "twitter", "wikipedia-sl"
+-          "google-b-d", "ceneji", "ddg", "najdi-si", "odpiralni", "wikipedia-sl"
++          "google", "ceneji", "ddg", "najdi-si", "odpiralni", "wikipedia-sl"
          ]
        }
      },
@@ -865,16 +865,16 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "tl": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-tl"
-+          "google", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-tl"
+-          "google-b-d", "bing", "amazondotcom", "ddg", "wikipedia-tl"
++          "google", "bing", "amazondotcom", "ddg", "wikipedia-tl"
          ]
        }
      },
      "tr": {
        "default": {
          "visibleDefaultEngines": [
--          "yandex-tr", "google-b-d", "ddg", "twitter", "wikipedia-tr"
-+          "yandex-tr", "google", "ddg", "twitter", "wikipedia-tr"
+-          "yandex-tr", "google-b-d", "ddg", "wikipedia-tr"
++          "yandex-tr", "google", "ddg", "wikipedia-tr"
          ]
        },
        "TR": {
@@ -898,16 +898,16 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "ur": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazon-in", "ddg", "twitter", "wikipedia-ur"
-+          "google", "bing", "amazon-in", "ddg", "twitter", "wikipedia-ur"
+-          "google-b-d", "bing", "amazon-in", "ddg", "wikipedia-ur"
++          "google", "bing", "amazon-in", "ddg", "wikipedia-ur"
          ]
        }
      },
      "uz": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-uz"
-+          "google", "bing", "amazondotcom", "ddg", "twitter", "wikipedia-uz"
+-          "google-b-d", "bing", "amazondotcom", "ddg", "wikipedia-uz"
++          "google", "bing", "amazondotcom", "ddg", "wikipedia-uz"
          ]
        }
      },
@@ -922,8 +922,8 @@ diff -r d34716786f5b browser/components/search/extensions/list.json
      "wo": {
        "default": {
          "visibleDefaultEngines": [
--          "google-b-d", "bing", "amazon-france", "ddg", "ebay-fr", "twitter", "wikipedia-wo"
-+          "google", "bing", "amazon-france", "ddg", "ebay-fr", "twitter", "wikipedia-wo"
+-          "google-b-d", "bing", "amazon-france", "ddg", "ebay-fr", "wikipedia-wo"
++          "google", "bing", "amazon-france", "ddg", "ebay-fr", "wikipedia-wo"
          ]
        }
      },
