@@ -7,6 +7,7 @@ firefox-trunk (78.0~a1~hg20200526r532094-0ubuntu1) UNRELEASED; urgency=medium
     - debian/patches/ppc-drop-register.patch
   * Remove obsolete conf-flags
     - debian/config/mozconfig.in
+    - debian/patches/partially-revert-google-search-update.patch
     - debian/patches/ubuntu-ua-string-changes.patch
     - debian/patches/support-coinstallable-trunk-build.patch
 
